panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__assignment__test_assignment_to_comma_expression.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/assignment/test_assignment_to_comma_expression.c
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: cannot assign to this expression because it is not an lvalue
   ╭─[panko/tests/cases/assignment/test_assignment_to_comma_expression.c:4:5]
   │
 4 │     (x, y) = 42;
   │     ───┬──  
   │        ╰──── this expression is not an lvalue
───╯
